@@ -16,13 +16,17 @@
   the current \code{on.exit} code is removed.
 }
 \usage{
-on.exit(expr = NULL, add = FALSE)
+on.exit(expr = NULL, add = FALSE, after = TRUE)
 }
 \arguments{
   \item{expr}{an expression to be executed.}
   \item{add}{if TRUE, add \code{expr} to be executed after any previously
-    set expressions; otherwise (the default) \code{expr} will overwrite
-    any previously set expressions.}
+    set expressions (or before if \code{after} is FALSE); otherwise (the
+    default) \code{expr} will overwrite any previously set expressions.}
+  \item{after}{if \code{add} is TRUE and \code{after} is FALSE, then
+    \code{expr} will be added on top of the expressions that were already
+    registered. The resulting last in first out order is useful for freeing
+    or closing resources in reverse order.}
 }
 \details{
   The \code{expr} argument passed to \code{on.exit} is recorded without
